--- a/src/Wenwen/FrontendBundle/Resources/views/Components/_footer.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Components/_footer.html.twig
@@ -40,7 +40,7 @@
         </div>
     </div>
     <div class="footer-con-right right">
-        <a href="#" class="goTop">返回<br>顶部</a>
+        <a class="goTop">返回<br>顶部</a>
     </div>
 </div>
 {% include 'WenwenFrontendBundle:Components:_footerCopyright.html.twig' %} 
