--- a/src/Wenwen/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Home/index.html.twig
@@ -60,10 +60,10 @@
 		<div class="quickLCon">
 			<div class="wbTit"><span class="wbIco"></span>微博登录提示<span class="closeBtn"></span></div>
 			<div class="wbText">
-				<p class="l1">微博登录现在仅<strong>对老用户开放</strong>，如果您是第一次在我站使用微博快捷登录，您将无法正常登录哟！</p>
+				<p class="l1">很抱歉，微博快捷登录功能因维护<strong>暂时关闭</strong>！</p>
 				<p class="l2">如果您没有账号，请到注册页面进行正常的注册流程。我们的开发人员正在抓紧对此功能进行修复，感谢您的配合！</p>
+				<p class="wbBtnArea"><a class="cancelBtn">我知道了</a></p>
 			</div>
-			<div class="wbBtnArea"><a class="cancelBtn">取消</a><a href="{{ path('weibo_api_login') }}" class="continueBtn">继续</a></div>
 		</div>
 	</div>
 </div>
@@ -72,10 +72,10 @@
 		<div class="quickLCon">
 			<div class="wbTit"><span class="qqIco"></span>QQ登录提示<span class="closeBtn"></span></div>
 			<div class="wbText">
-				<p class="l1">QQ登录现在仅<strong>对老用户开放</strong>，如果您是第一次在我站使用QQ快捷登录，您将无法正常登录哟！</p>
+				<p class="l1">很抱歉，QQ快捷登录功能因维护<strong>暂时关闭</strong>！</p>
 				<p class="l2">如果您没有账号，请到注册页面进行正常的注册流程。我们的开发人员正在抓紧对此功能进行修复，感谢您的配合！</p>
+				<p class="wbBtnArea"><a class="cancelBtn">我知道了</a></p>
 			</div>
-			<div class="wbBtnArea"><a class="cancelBtn">取消</a><a href="{{ path('qq_api_login') }}" class="continueBtn">继续</a></div>
 		</div>
 	</div>
 </div>
@@ -100,6 +100,7 @@
 					<a href="#" class="rBtn">立即兑换</a>
 				</div>
 				<div class="rTag">2010积分<br>起兑</div>
+				<div class="rLine"></div>
 			</li>
 			<li>
 				<div class="rMes">
@@ -108,7 +109,8 @@
 					<a href="#" class="rBtn">立即兑换</a>
 				</div>
 				<div class="rTag">2050积分<br>起兑</div>
-			</li>
+				<div class="rLine"></div>
+			</li> 
 			<li class="last">
 				<div class="rMes">
 					<span class="rPic3"></span>
