--- a/src/Wenwen/FrontendBundle/Resources/views/User/register.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/User/register.html.twig
@@ -57,10 +57,10 @@
 		<div class="main-register-btn"><span id="submit_button" tabindex="0">注&nbsp;&nbsp;&nbsp;册</span><img src="{{ asset('img/user/regPoint.png') }}" alt="注册即送10积分"></div>
         {{ form_rest(form) }}
 		</form>
-		<div class="login-others">
+		{# <div class="login-others">
 			<p>用第三方账号登录：</p>
 			<div class="login-others-btns"><a class="weibo-login"><img src="{{ asset('img/common/sina_logo.png') }}" alt="微博登录">微博登录</a><a class="qq-login"><img src="{{ asset('img/common/qq_logo.png') }}" alt="QQ登录">QQ登录</a></div>
-		</div>
+		</div> #}
 	</div>
 	<div class="quickLogWrap w1000">
 		<div class="quickLogPop qlpR" id="wbLogCon" style="display: none;">
