--- a/src/Wenwen/FrontendBundle/Resources/views/Vote/_voteList.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Vote/_voteList.html.twig
@@ -1,6 +1,6 @@
 <ul>
-    {% if pagination is defined %}
-    {% for item in pagination %}
+    {% if vote_list|length > 0 %}
+    {% for item in vote_list %}
         <li {% if item.timelimit is defined %} class="vote-new" {% endif %}>
             <span class="vote-img">
                 {% if (item.sqPath) %}
@@ -27,10 +27,10 @@
                 {% if (item.endTime|date("Ymd") < "now"|date('Ymd')) %}
                     <div class="survey-btn"><a href="{{ path('jili_frontend_vote_result',{'id':item.id}) }}" class="disabled">去看看</a></div>
                 {% else %}
-                    {% if app.session.has('uid') and item.userAnswerCount > 0 %}
-                    <div class="survey-btn"><a href="{{ path('jili_frontend_vote_result',{'id':item.id}) }}" class="disabled">去看看</a></div>
-                    {% else %}
+                    {% if app.session.has('uid') and item.answerable %}
                     <div class="survey-btn"><a href="{{ path('jili_frontend_vote_show',{'id':item.id}) }}">去投票</a></div>
+                    {% else %}
+                    <div class="survey-btn"><a href="{{ path('jili_frontend_vote_result',{'id':item.id}) }}" class="disabled">去看看</a></div>
                     {% endif %}
                 {% endif %}
             {% endif %}
