--- a/src/Wenwen/FrontendBundle/Resources/views/Vote/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Vote/index.html.twig
@@ -4,9 +4,9 @@
 {% block stylesheet %}
 <link href="{{ asset('css/vote.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
- 
+
 {% block header %}
-{% include 'WenwenFrontendBundle:Components:_header.html.twig' %} 
+{% include 'WenwenFrontendBundle:Components:_header.html.twig' %}
 {% endblock %}
 
 {% block body %}
@@ -15,9 +15,9 @@
 		<div class="vote vote-sub">
 			<h1>快速问答</h1>
             {% include 'WenwenFrontendBundle:Vote:_voteList.html.twig' %}
-			<div class="page-wrapper">
-			{% if pagination is defined %}{{ knp_pagination_render(pagination) }}{%endif %}
-			</div>
+            <div class="page-wrapper">
+                {% include "WenwenFrontendBundle:Components:_pageNavs.html.twig" %}
+            </div>
 		</div>
 	</div>
 	{% include 'WenwenFrontendBundle:Vote:_voteRight.html.twig' %}
@@ -25,7 +25,7 @@
 {% endblock %}
 
 {% block footer %}
-{% include 'WenwenFrontendBundle:Components:_footer.html.twig' %} 
+{% include 'WenwenFrontendBundle:Components:_footer.html.twig' %}
 {% endblock %}
 
 {% block javascript %}
