fix vote list for top

--- a/src/Jili/BackendBundle/Resources/views/Vote/index.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/Vote/index.html.twig
@@ -16,9 +16,9 @@
 
 {% if vote_edit_complete is defined %}
 {% if is_new == true %}
-    設問を追加しました。[ID: {{edited_vote_id}}]
+    快速问答追加成功。[ID: {{edited_vote_id}}]
 {% else %}
-    設問の設定変更をしました。[ID: {{edited_vote_id}}]
+    快速问答更新成功。[ID: {{edited_vote_id}}]
 {% endif %}
 {% endif %}
 
