--- a/src/Wenwen/FrontendBundle/Resources/views/base.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/base.html.twig
@@ -24,5 +24,24 @@
     <div class="footer">
         {% block footer %}{% endblock %}
     </div>
+    <!-- Google Tag Manager -->
+    {% if app.request.isSecure %}
+    <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-Q5G3"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-Q5G3');</script>
+    {% else %}
+    <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-95G7"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-95G7');</script>
+    {% endif %}
+    <!-- End Google Tag Manager -->
 </body>
 </html>
