--- a/src/Jili/BackendBundle/Resources/views/Vote/activelist.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/Vote/activelist.html.twig
@@ -6,7 +6,7 @@
 <script src="{{ asset('js/lib/jquery-1.11.1.min.js')}}" type="text/javascript"></script>
 {% endblock %}
 
-<h2 align="center">发行中的快速问答</h2>
+<h2 align="center">进行中的快速问答</h2>
 <table class="list">
     <tr>
         <th>时间</th>
