--- a/src/Jili/BackendBundle/Resources/views/Vote/reserveList.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/Vote/reserveList.html.twig
@@ -6,7 +6,7 @@
 <script src="{{ asset('js/lib/jquery-1.11.1.min.js')}}" type="text/javascript"></script>
 {% endblock %}
 
-<h2 align="center">未发行的快速问答</h2>
+<h2 align="center">即将开始的快速问答</h2>
 <table class="list">
     <tr>
         <th>时间</th>
