--- a/web/css/404.css
+++ b/web/css/404.css
@@ -347,7 +347,8 @@ body {
         color: #fff; }
 
 body {
-  background: #f5f5f5; }
+  background: url(../img/common/seamless-noise-bg.png) repeat;
+  background-color: rgba(255, 255, 255, 0.5); }
 
 .main {
   margin-top: 0; }
@@ -382,3 +383,17 @@ body {
 
 .footer {
   display: none; }
+
+.mtWrap {
+  width: 894px;
+  height: 407px;
+  margin: 100px auto;
+  background: url(../img/404/91wwInMt.png) no-repeat center; }
+  .mtWrap .text {
+    width: 300px;
+    font-size: 14px;
+    line-height: 24px;
+    text-align: center;
+    padding: 187px 0 0 300px; }
+    .mtWrap .text b {
+      color: #f57400; }
