--- a/web/css/404.css
+++ b/web/css/404.css
@@ -397,3 +397,6 @@ body {
     padding: 187px 0 0 300px; }
     .mtWrap .text b {
       color: #f57400; }
+
+.mtWrapJL {
+  background: url(../img/404/91jlInMt.png) no-repeat center; }
