--- a/web/sass/404.scss
+++ b/web/sass/404.scss
@@ -45,7 +45,7 @@ body{
 	display: none;
 }
 
-//91问问正在改版维护中
+//91问问、积粒网正在改版维护中
 .mtWrap{
 	width: 894px;
     height: 407px;
@@ -61,4 +61,7 @@ body{
 			color: #f57400;
 		}
 	}
+}
+.mtWrapJL{
+	background: url(../img/404/91jlInMt.png) no-repeat center;
 }
