--- a/src/Wenwen/FrontendBundle/Resources/views/Advertisement/shopDetail.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Advertisement/shopDetail.html.twig
@@ -1,6 +1,10 @@
 {% extends 'WenwenFrontendBundle::base.html.twig' %}
 {% block title %}返利详情：{{ parent() }}{% endblock %}
-
+{% block meta %}
+<meta name="keywords" content="购物返利，返利比例，商家返利，购物返现，返利详情" />
+<meta name="description" content="返利详情给用户提供了可参考的依据供用户查询自己所购物物品的大概返利，让用户更加清楚的了解每种商品的具体返利比率和具体的返利情况。" />
+<meta name="title" content="返利详情:91问问调查网" />
+{% endblock %}
 {% block stylesheet %}
 <link href="{{ asset('css/shopDetail.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
