--- a/src/Wenwen/FrontendBundle/Resources/views/Advertisement/shopList.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Advertisement/shopList.html.twig
@@ -1,6 +1,10 @@
 {% extends 'WenwenFrontendBundle::base.html.twig' %}
 {% block title %}商家列表：{{ parent() }}{% endblock %}
-
+{% block meta %}
+<meta name="keywords" content="商家列表，购物返利，商家活动，商家返利，返利网站，购物返现" />
+<meta name="description" content="商家列表中为用户提供各个分类的商家进行选择，还可以直接搜索自己喜欢的商家或通过字母索引来查询自己常用的商家进行购物获得返利。" />
+<meta name="title" content="商家列表:91问问调查网" />
+{% endblock %}
 {% block stylesheet %}
 <link href="{{ asset('css/shopList.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
