--- a/src/Wenwen/FrontendBundle/Resources/views/Exchange/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Exchange/index.html.twig
@@ -1,6 +1,10 @@
 {% extends 'WenwenFrontendBundle::base.html.twig' %}
 {% block title %}兑换中心：{{ parent() }} {% endblock %}
-
+{% block meta %}
+<meta name="keywords" content="兑换中心，支付宝现金兑换，手机费兑换，手机流量包兑换" />
+<meta name="description" content="兑换中心为用户提供了多种兑换方式，用户可以直接兑换成支付宝现金或手机费，简单直接，方便高效。" />
+<meta name="title" content="兑换中心:91问问调查网" />
+{% endblock %}
 {% block stylesheet %}
 <link href="{{ asset('css/exchange.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
