--- a/src/Wenwen/FrontendBundle/Resources/views/Advertisement/offer99.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Advertisement/offer99.html.twig
@@ -1,6 +1,10 @@
 {% extends 'WenwenFrontendBundle::base.html.twig' %}
 {% block title %}体验广告：{{ parent() }}{% endblock %}
-
+{% block meta %}
+<meta name="keywords" content="体验广告，购物返利，商家活动，商家返利，做任务赚钱，做任务返现金" />
+<meta name="description" content="体验广告为用户提供了多种赚钱渠道，可以通过任务大厅一和二做任务赢现金，还可以参加商家活动和在商家列表中选择自己喜欢的商家进行购物获得返利。" />
+<meta name="title" content="体验广告:91问问调查网" />
+{% endblock %}
 {% block stylesheet %}
 <link href="{{ asset('css/advertisement.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
