--- a/src/Wenwen/FrontendBundle/Resources/views/Vote/index.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Vote/index.html.twig
@@ -1,6 +1,10 @@
 {% extends 'WenwenFrontendBundle::base.html.twig' %}
 {% block title %}快速问答：{{ parent() }} {% endblock %}
-
+{% block meta %}
+<meta name="keywords" content="快速问答，热点问答，投票，有奖出题，站内动态，热门投票，答题" />
+<meta name="description" content="快速问答页面提供热门问题一览，供用户查看自己感兴趣的问题，并选择自己想要进行的投票问题，且最新的问答在24小时内可多获得1个积分。" />
+<meta name="title" content="快速问答:91问问调查网" />
+{% endblock %}
 {% block stylesheet %}
 <link href="{{ asset('css/vote.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
