--- a/src/Wenwen/FrontendBundle/Resources/views/Vote/show.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Vote/show.html.twig
@@ -1,6 +1,10 @@
 {% extends 'WenwenFrontendBundle::base.html.twig' %}
 {% block title %}快速问答详情：{{ parent() }} {% endblock %}
-
+{% block meta %}
+<meta name="keywords" content="快速问答，热点问答，快速问答详情，热门问题，热门回答，快速问答投票" />
+<meta name="description" content="快速问答详情页面为用户展示了热门问题及常见回答，供用户进行投票，表达自己的观点。" />
+<meta name="title" content="快速问答详情:91问问调查网" />
+{% endblock %}
 {% block stylesheet %}
 <link href="{{ asset('css/voteDetail.css') }} " rel="stylesheet" type="text/css">
 <link href="{{ asset('css/component/crumbs.css') }} " rel="stylesheet" type="text/css">
