--- a/web/css/404.css
+++ b/web/css/404.css
@@ -293,6 +293,7 @@ body {
     padding-left: 40px; }
 
 .footer {
+  width: 100%;
   margin-top: 50px;
   border-top: 3px solid #d6d9df;
   padding: 30px 0;
