--- a/web/css/about.css
+++ b/web/css/about.css
@@ -443,6 +443,7 @@ p {
       color: #0078b6; }
 
 .footer {
+  width: 100%;
   margin-top: 50px;
   border-top: 3px solid #d6d9df;
   padding: 30px 0;
