--- a/web/css/callboard.css
+++ b/web/css/callboard.css
@@ -295,7 +295,6 @@ body {
 .main .main-con .newsInfo {
   display: table;
   margin: 20px auto;
-  padding: 0 0 140px;
   position: relative;
   width: 1000px;
   z-index: auto; }
@@ -304,8 +303,8 @@ body {
     border: 1px solid #ececec;
     display: inline-block;
     float: left;
-    padding: 20px;
-    width: 732px; }
+    padding: 30px;
+    width: 940px; }
     .main .main-con .newsInfo article h1 {
       color: #ff6700;
       font-size: 22px;
@@ -324,6 +323,7 @@ body {
       text-align: left; }
 
 .footer {
+  width: 100%;
   margin-top: 50px;
   border-top: 3px solid #d6d9df;
   padding: 30px 0;
