--- a/web/css/exchange.css
+++ b/web/css/exchange.css
@@ -378,6 +378,7 @@ body {
     border: 1px solid #dedede; }
 
 .footer {
+  width: 100%;
   margin-top: 50px;
   border-top: 3px solid #d6d9df;
   padding: 30px 0;
