--- a/web/css/help.css
+++ b/web/css/help.css
@@ -435,6 +435,7 @@ body {
         color: #4c94ff; }
 
 .footer {
+  width: 100%;
   margin-top: 50px;
   border-top: 3px solid #d6d9df;
   padding: 30px 0;
