--- a/web/css/home.css
+++ b/web/css/home.css
@@ -775,6 +775,7 @@ body {
   margin-right: 3px; }
 
 .footer {
+  width: 100%;
   margin-top: 50px;
   border-top: 3px solid #d6d9df;
   padding: 30px 0;
