--- a/web/css/index.css
+++ b/web/css/index.css
@@ -961,6 +961,7 @@ body {
   color: #ff0000; }
 
 .footer {
+  width: 100%;
   margin-top: 50px;
   border-top: 3px solid #d6d9df;
   padding: 30px 0;
