--- a/web/css/message.css
+++ b/web/css/message.css
@@ -470,6 +470,7 @@ h1 {
       color: #ff6700; }
 
 .footer {
+  width: 100%;
   margin-top: 50px;
   border-top: 3px solid #d6d9df;
   padding: 30px 0;
