--- a/web/css/newGuide.css
+++ b/web/css/newGuide.css
@@ -427,6 +427,7 @@ body {
     margin-bottom: 20px; }
 
 .footer {
+  width: 100%;
   margin-top: 50px;
   border-top: 3px solid #d6d9df;
   padding: 30px 0;
