--- a/web/css/profile.css
+++ b/web/css/profile.css
@@ -641,6 +641,7 @@ h1 {
         border: 1px solid #f05218; }
 
 .footer {
+  width: 100%;
   margin-top: 50px;
   border-top: 3px solid #d6d9df;
   padding: 30px 0;
