--- a/web/css/shopDetail.css
+++ b/web/css/shopDetail.css
@@ -449,6 +449,7 @@ body {
   margin-left: 0 !important; }
 
 .footer {
+  width: 100%;
   margin-top: 50px;
   border-top: 3px solid #d6d9df;
   padding: 30px 0;
