--- a/web/css/shopList.css
+++ b/web/css/shopList.css
@@ -500,6 +500,7 @@ body {
       color: #ff6700; }
 
 .footer {
+  width: 100%;
   margin-top: 50px;
   border-top: 3px solid #d6d9df;
   padding: 30px 0;
