--- a/web/css/suggest.css
+++ b/web/css/suggest.css
@@ -454,6 +454,7 @@ body {
     background: #fafafa; }
 
 .footer {
+  width: 100%;
   margin-top: 50px;
   border-top: 3px solid #d6d9df;
   padding: 30px 0;
