--- a/web/css/survey.css
+++ b/web/css/survey.css
@@ -601,6 +601,7 @@ body {
       color: #ff6700; }
 
 .footer {
+  width: 100%;
   margin-top: 50px;
   border-top: 3px solid #d6d9df;
   padding: 30px 0;
