--- a/web/css/voteDetail.css
+++ b/web/css/voteDetail.css
@@ -460,6 +460,7 @@ body {
       color: #bfbfbf; }
 
 .footer {
+  width: 100%;
   margin-top: 50px;
   border-top: 3px solid #d6d9df;
   padding: 30px 0;
