--- a/web/sass/layout/footer.scss
+++ b/web/sass/layout/footer.scss
@@ -7,6 +7,7 @@ $footer-con-font-color: #535353;
 $footer-copyright-font-color: #989898;
 
 .footer{
+	width: 100%;
 	margin-top: 50px;
 	border-top: 3px solid #d6d9df;
 	padding: 30px 0;
