modify pic of about company

--- a/web/sass/about.scss
+++ b/web/sass/about.scss
@@ -25,7 +25,7 @@
 			}
 			.history{
 				width: 100%;
-				height: 1106px;
+				height: 1644px;
 				position: relative; 
 				background: url(../img/about/history.png) no-repeat 39px 18px;
 				@include dib();
@@ -38,47 +38,47 @@
 				}
 				.hst1{
 					left: 79px;
-					top: 61px;
+					top: 95px;
 				}
 				.hst2{
-					right: 40px;
-					top: 137px;
+					right: 0;
+					top: 219px;
 				}
 				.hst3{
 					left: 79px;
-					top: 230px;
+					top: 365px;
 				}
 				.hst4{
-					right: 40px;
-					top: 315px;
+					right: 0;
+					top: 465px;
 				}
 				.hst5{
 					left: 79px;
-					top: 401px;
+					top: 580px;
 				}
 				.hst6{
-					right: 40px;
-					top: 488px;
+					right: 0;
+					top: 730px;
 				}
 				.hst7{
 					left: 79px;
-					bottom: 424px;
+					bottom: 672px;
 				}
 				.hst8{
-					right: 40px;
-					bottom: 322px; 
+					right: 0;
+					bottom: 507px; 
 				}
 				.hst9{
 					left: 79px;
-					bottom: 232px;
+					bottom: 345px;
 				}
 				.hst10{
-					right: 40px;
-					bottom: 162px;
+					right: 0;
+					bottom: 222px;
 				}
 				.hst11{
 					left: 79px;
-					bottom: 63px;
+					bottom: 77px;
 				}
 			}
 		}
