--- a/web/css/about.css
+++ b/web/css/about.css
@@ -356,7 +356,7 @@ p {
   line-height: 30px; }
 .main-about-con .aboutR .rpaIntro .history {
   width: 100%;
-  height: 1106px;
+  height: 1644px;
   position: relative;
   background: url(../img/about/history.png) no-repeat 39px 18px;
   display: inline-block;
@@ -370,37 +370,37 @@ p {
     font-size: 13px; }
   .main-about-con .aboutR .rpaIntro .history .hst1 {
     left: 79px;
-    top: 61px; }
+    top: 95px; }
   .main-about-con .aboutR .rpaIntro .history .hst2 {
-    right: 40px;
-    top: 137px; }
+    right: 0;
+    top: 219px; }
   .main-about-con .aboutR .rpaIntro .history .hst3 {
     left: 79px;
-    top: 230px; }
+    top: 365px; }
   .main-about-con .aboutR .rpaIntro .history .hst4 {
-    right: 40px;
-    top: 315px; }
+    right: 0;
+    top: 465px; }
   .main-about-con .aboutR .rpaIntro .history .hst5 {
     left: 79px;
-    top: 401px; }
+    top: 580px; }
   .main-about-con .aboutR .rpaIntro .history .hst6 {
-    right: 40px;
-    top: 488px; }
+    right: 0;
+    top: 730px; }
   .main-about-con .aboutR .rpaIntro .history .hst7 {
     left: 79px;
-    bottom: 424px; }
+    bottom: 672px; }
   .main-about-con .aboutR .rpaIntro .history .hst8 {
-    right: 40px;
-    bottom: 322px; }
+    right: 0;
+    bottom: 507px; }
   .main-about-con .aboutR .rpaIntro .history .hst9 {
     left: 79px;
-    bottom: 232px; }
+    bottom: 345px; }
   .main-about-con .aboutR .rpaIntro .history .hst10 {
-    right: 40px;
-    bottom: 162px; }
+    right: 0;
+    bottom: 222px; }
   .main-about-con .aboutR .rpaIntro .history .hst11 {
     left: 79px;
-    bottom: 63px; }
+    bottom: 77px; }
 .main-about-con .aboutR .wwIntro p {
   margin: 16px 0;
   line-height: 23px; }
