update compressed css file

--- a/web/css/component/slider.css
+++ b/web/css/component/slider.css
@@ -1,38 +1,1 @@
-.main-slider-wrapper {
-  background: #e0ebff;
-  overflow: hidden; }
-  .main-slider-wrapper.color0 {
-    background: #5989b9; }
-  .main-slider-wrapper.color1 {
-    background: #030408; }
-  .main-slider-wrapper.color2 {
-    background: #fce0f6; }
-  .main-slider-wrapper.color3 {
-    background: #5ebce0; }
-
-.main-slider {
-  position: relative;
-  z-index: 1; }
-  .main-slider .mask {
-    position: relative;
-    z-index: 2;
-    overflow: hidden; }
-  .main-slider li {
-    position: absolute;
-    z-index: 1000;
-    top: 0;
-    left: 0; }
-  .main-slider span {
-    position: absolute;
-    z-index: 1000;
-    display: inline-block;
-    *display: inline;
-    *zoom: 1; }
-  .main-slider .btn-group {
-    position: absolute;
-    z-index: 1000; }
-    .main-slider .btn-group b {
-      cursor: pointer;
-      display: inline-block;
-      *display: inline;
-      *zoom: 1; }
+.main-slider-wrapper{background:#e0ebff;overflow:hidden}.main-slider-wrapper.color0{background:#5989b9}.main-slider-wrapper.color1{background:#030408}.main-slider-wrapper.color2{background:#fce0f6}.main-slider-wrapper.color3{background:#5ebce0}.main-slider{position:relative;z-index:1}.main-slider .mask{position:relative;z-index:2;overflow:hidden}.main-slider li{position:absolute;z-index:1000;top:0;left:0}.main-slider span{position:absolute;z-index:1000;display:inline-block;*display:inline;*zoom:1}.main-slider .btn-group{position:absolute;z-index:1000}.main-slider .btn-group b{cursor:pointer;display:inline-block;*display:inline;*zoom:1}
