--- a/web/css/layout/common.css
+++ b/web/css/layout/common.css
@@ -1,55 +1,1 @@
-.w1000 {
-  width: 1000px;
-  margin: 0 auto; }
-
-.left {
-  float: left; }
-
-.right {
-  float: right; }
-
-.hide {
-  display: none; }
-
-body {
-  font-family: "Microsoft YaHei", Tohoma, Arial;
-  font-size: 12px;
-  background: #f2f3f5;
-  color: #333; }
-
-.main {
-  margin-top: 2px; }
-  .main.unlogin {
-    margin-top: 0px; }
-
-.main-con-left > div, .main-con-right > div {
-  margin-top: 20px;
-  background: #fff;
-  border: 1px solid #ebedf2; }
-
-.main-con-left > div {
-  padding: 10px 25px; }
-
-.main-con-left {
-  width: 75%; }
-
-.main-con-right {
-  width: 23%; }
-  .main-con-right h2 {
-    padding: 13px 15px 0;
-    line-height: 50px;
-    color: #000;
-    font-size: 14px;
-    font-weight: bold;
-    border-bottom: 1px solid #f6f6f6; }
-  .main-con-right .weibo {
-    height: 550px;
-    overflow: hidden; }
-
-.clearfix {
-  zoom: 1; }
-
-.clearfix:after {
-  content: "";
-  display: table;
-  clear: both; }
+.w1000{width:1000px;margin:0 auto}.left{float:left}.right{float:right}.hide{display:none}body{font-family:"Microsoft YaHei",Tohoma,Arial;font-size:12px;background:#f2f3f5;color:#333}.main{margin-top:2px}.main.unlogin{margin-top:0px}.main-con-left>div,.main-con-right>div{margin-top:20px;background:#fff;border:1px solid #ebedf2}.main-con-left>div{padding:10px 25px}.main-con-left{width:75%}.main-con-right{width:23%}.main-con-right h2{padding:13px 15px 0;line-height:50px;color:#000;font-size:14px;font-weight:bold;border-bottom:1px solid #f6f6f6}.main-con-right .weibo{height:550px;overflow:hidden}.clearfix{zoom:1}.clearfix:after{content:"";display:table;clear:both}
