--- a/web/css/component/survey.css
+++ b/web/css/component/survey.css
@@ -1,257 +1,1 @@
-.main-con-left h1 {
-  height: 55px;
-  line-height: 55px;
-  font-size: 24px;
-  color: #757575;
-  padding: 10px 0 0 6px; }
-.main-con-left em {
-  width: 24px;
-  height: 26px;
-  margin-right: 11px;
-  background: url(../img/common/titIco.png) no-repeat 0 -1px;
-  vertical-align: middle;
-  display: inline-block;
-  *display: inline;
-  *zoom: 1; }
-.main-con-left .title {
-  font-size: 15px;
-  font-weight: 600;
-  line-height: 35px; }
-  .main-con-left .title a:hover {
-    color: #914b11; }
-.main-con-left ul {
-  width: 100%; }
-.main-con-left li {
-  padding: 20px;
-  position: relative;
-  z-index: 1; }
-  .main-con-left li:hover .survey-item, .main-con-left li.active .survey-item {
-    width: 86%; }
-  .main-con-left li:hover .vote-btn, .main-con-left li.active .vote-btn {
-    width: 15%; }
-  .main-con-left li:hover .vote-txt, .main-con-left li.active .vote-txt {
-    width: 68%; }
-  .main-con-left li span {
-    vertical-align: top;
-    display: inline-block;
-    *display: inline;
-    *zoom: 1; }
-
-.survey-item {
-  width: 86%;
-  padding: 0 0 15px 0; }
-  .survey-item li {
-    float: left;
-    width: 22%;
-    text-align: left;
-    padding: 5px 0 0 10px;
-    border-top: none;
-    border-left: 1px solid #f6f6f6; }
-    .survey-item li span {
-      line-height: 22px;
-      color: #9c9c9c; }
-    .survey-item li p {
-      line-height: 28px;
-      color: #9c9c9c; }
-      .survey-item li p strong {
-        color: #ff6700;
-        font-size: 16px; }
-    .survey-item li.first {
-      border-left: none; }
-    .survey-item li.last {
-      width: 10%; }
-
-.survey .survey-btn {
-  color: #666;
-  background: transparent;
-  width: 24%;
-  line-height: 170px;
-  cursor: default;
-  position: absolute;
-  right: -13px;
-  top: 0px; }
-  .survey .survey-btn a {
-    color: #fff;
-    background: #ff7733;
-    width: 141px;
-    height: 33px;
-    line-height: 33px;
-    text-align: center;
-    color: #fff;
-    background: #ff652b;
-    border: 1px solid #ff652b;
-    border-radius: 3px;
-    cursor: pointer;
-    transition: all 0.4s;
-    -moz-transition: all 0.4s;
-    -webkit-transition: all 0.4s;
-    -o-transition: all 0.4s;
-    display: inline-block;
-    *display: inline;
-    *zoom: 1; }
-    .survey .survey-btn a:hover {
-      background: #f05218;
-      border: 1px solid #f05218; }
-  .survey .survey-btn .disabled {
-    margin-top: 67px;
-    color: #fff;
-    background: #a7a7a7;
-    border: 1px solid #a7a7a7;
-    border-radius: 3px;
-    width: 141px;
-    height: 33px;
-    line-height: 33px;
-    text-align: center;
-    display: inline-block;
-    *display: inline;
-    *zoom: 1; }
-
-.vote .vote-btn {
-  width: 0%;
-  height: 65%;
-  line-height: 700%;
-  position: absolute;
-  z-index: 1000;
-  top: 27px;
-  right: 0;
-  text-align: center;
-  color: #fff;
-  font-size: 14px;
-  font-weight: bold;
-  background: #ff6700;
-  cursor: pointer;
-  overflow: hidden;
-  transition: width 300ms;
-  -moz-transition: width 300ms;
-  -webkit-transition: width 300ms;
-  -o-transition: width 300ms;
-  transition: all 0.4s;
-  -moz-transition: all 0.4s;
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s; }
-  .vote .vote-btn:hover, .vote .vote-btn:active {
-    background: #f25807; }
-
-.vote a.vote-btn {
-  color: #fff;
-  line-height: 700%; }
-.vote li {
-  padding: 30px 20px; }
-  .vote li.vote-new .vote-img {
-    width: 15%; }
-  .vote li.vote-new .vote-txt {
-    width: 54%; }
-  .vote li.vote-new .tips {
-    position: absolute;
-    z-index: 1000;
-    top: 23px;
-    right: 5px; }
-    .vote li.vote-new .tips span {
-      background: url(../img/vote/doubleTag.png) no-repeat;
-      width: 70px;
-      height: 33px;
-      cursor: pointer; }
-  .vote li.vote-new .tips-con {
-    position: absolute;
-    z-index: 1999;
-    top: -40px;
-    right: -3px;
-    padding-bottom: 10px;
-    width: 270px;
-    display: none; }
-    .vote li.vote-new .tips-con p {
-      padding-left: 5px;
-      line-height: 32px;
-      background: #fff;
-      border: 1px solid #dedddc;
-      border-radius: 3px;
-      -webkit-box-shadow: 0px 2px 0px #f2f2f2;
-      -moz-box-shadow: 0px 2px 0px #f2f2f2;
-      box-shadow: 0px 2px 0px #f2f2f2; }
-    .vote li.vote-new .tips-con b {
-      position: absolute;
-      z-index: 1999;
-      bottom: 1px;
-      right: 0;
-      width: 9px;
-      height: 10px;
-      background: url(../img/common/icons_arrow.png) right bottom no-repeat;
-      display: inline-block;
-      *display: inline;
-      *zoom: 1; }
-
-.vote-img {
-  width: 15%; }
-
-.vote-txt {
-  width: 84%;
-  color: #9c9c9c;
-  line-height: 22px;
-  transition: width 300ms;
-  -moz-transition: width 300ms;
-  -webkit-transition: width 300ms;
-  -o-transition: width 300ms; }
-  .vote-txt p {
-    padding-left: 3px;
-    overflow: hidden;
-    -ms-text-overflow: ellipsis;
-    text-overflow: ellipsis;
-    white-space: nowrap; }
-  .vote-txt .relate {
-    color: #9c9c9c; }
-    .vote-txt .relate span {
-      padding: 0 3px; }
-      .vote-txt .relate span strong {
-        color: #ff6700; }
-      .vote-txt .relate span.vline {
-        color: #f6f6f6; }
-
-.countdown {
-  color: #914b11;
-  font-size: 20px;
-  position: absolute;
-  z-index: 1000;
-  top: 61px;
-  right: 5px;
-  height: 52px;
-  line-height: 52px; }
-  .countdown span {
-    width: 33px;
-    text-align: center;
-    border: 1px solid #dedddc;
-    background: #f5f5f5; }
-  .countdown b {
-    padding: 0 5px; }
-
-.proSurPop {
-  width: 240px;
-  height: 245px;
-  background: url(../img/questionnaire/profilePop.png) right bottom no-repeat;
-  position: absolute;
-  left: -230px;
-  top: -17px; }
-
-.proText {
-  width: 187px;
-  height: 100px;
-  margin: 115px 22px 0 22px;
-  overflow-y: scroll;
-  font-size: 14px;
-  line-height: 24px; }
-  .proText::-webkit-scrollbar {
-    -webkit-appearance: none;
-    width: 7px; }
-  .proText::-webkit-scrollbar-thumb {
-    border-radius: 4px;
-    background-color: rgba(0, 0, 0, 0.3);
-    -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, 0.3); }
-  .proText .em {
-    color: #ff6700; }
-
-.proClose {
-  width: 37px;
-  height: 37px;
-  position: absolute;
-  right: 0;
-  top: 0;
-  cursor: pointer; }
+.main-con-left h1{height:55px;line-height:55px;font-size:24px;color:#757575;padding:10px 0 0 6px}.main-con-left em{width:24px;height:26px;margin-right:11px;background:url(../img/common/titIco.png) no-repeat 0 -1px;vertical-align:middle;display:inline-block;*display:inline;*zoom:1}.main-con-left .title{font-size:15px;font-weight:600;line-height:35px}.main-con-left .title a:hover{color:#914b11}.main-con-left ul{width:100%}.main-con-left li{padding:20px;position:relative;z-index:1}.main-con-left li:hover .survey-item,.main-con-left li.active .survey-item{width:86%}.main-con-left li:hover .vote-btn,.main-con-left li.active .vote-btn{width:15%}.main-con-left li:hover .vote-txt,.main-con-left li.active .vote-txt{width:68%}.main-con-left li span{vertical-align:top;display:inline-block;*display:inline;*zoom:1}.survey-item{width:86%;padding:0 0 15px 0}.survey-item li{float:left;width:22%;text-align:left;padding:5px 0 0 10px;border-top:none;border-left:1px solid #f6f6f6}.survey-item li span{line-height:22px;color:#9c9c9c}.survey-item li p{line-height:28px;color:#9c9c9c}.survey-item li p strong{color:#ff6700;font-size:16px}.survey-item li.first{border-left:none}.survey-item li.last{width:10%}.survey .survey-btn{color:#666;background:transparent;width:24%;line-height:170px;cursor:default;position:absolute;right:-13px;top:0px}.survey .survey-btn a{color:#fff;background:#ff7733;width:141px;height:33px;line-height:33px;text-align:center;color:#fff;background:#ff652b;border:1px solid #ff652b;border-radius:3px;cursor:pointer;transition:all 0.4s;-moz-transition:all 0.4s;-webkit-transition:all 0.4s;-o-transition:all 0.4s;display:inline-block;*display:inline;*zoom:1}.survey .survey-btn a:hover{background:#f05218;border:1px solid #f05218}.survey .survey-btn .disabled{margin-top:67px;color:#fff;background:#a7a7a7;border:1px solid #a7a7a7;border-radius:3px;width:141px;height:33px;line-height:33px;text-align:center;display:inline-block;*display:inline;*zoom:1}.vote .vote-btn{width:0%;height:65%;line-height:700%;position:absolute;z-index:1000;top:27px;right:0;text-align:center;color:#fff;font-size:14px;font-weight:bold;background:#ff6700;cursor:pointer;overflow:hidden;transition:width 300ms;-moz-transition:width 300ms;-webkit-transition:width 300ms;-o-transition:width 300ms;transition:all 0.4s;-moz-transition:all 0.4s;-webkit-transition:all 0.4s;-o-transition:all 0.4s}.vote .vote-btn:hover,.vote .vote-btn:active{background:#f25807}.vote a.vote-btn{color:#fff;line-height:700%}.vote li{padding:30px 20px}.vote li.vote-new .vote-img{width:15%}.vote li.vote-new .vote-txt{width:54%}.vote li.vote-new .tips{position:absolute;z-index:1000;top:23px;right:5px}.vote li.vote-new .tips span{background:url(../img/vote/doubleTag.png) no-repeat;width:70px;height:33px;cursor:pointer}.vote li.vote-new .tips-con{position:absolute;z-index:1999;top:-40px;right:-3px;padding-bottom:10px;width:270px;display:none}.vote li.vote-new .tips-con p{padding-left:5px;line-height:32px;background:#fff;border:1px solid #dedddc;border-radius:3px;-webkit-box-shadow:0px 2px 0px #f2f2f2;-moz-box-shadow:0px 2px 0px #f2f2f2;box-shadow:0px 2px 0px #f2f2f2}.vote li.vote-new .tips-con b{position:absolute;z-index:1999;bottom:1px;right:0;width:9px;height:10px;background:url(../img/common/icons_arrow.png) right bottom no-repeat;display:inline-block;*display:inline;*zoom:1}.vote-img{width:15%}.vote-txt{width:84%;color:#9c9c9c;line-height:22px;transition:width 300ms;-moz-transition:width 300ms;-webkit-transition:width 300ms;-o-transition:width 300ms}.vote-txt p{padding-left:3px;overflow:hidden;-ms-text-overflow:ellipsis;text-overflow:ellipsis;white-space:nowrap}.vote-txt .relate{color:#9c9c9c}.vote-txt .relate span{padding:0 3px}.vote-txt .relate span strong{color:#ff6700}.vote-txt .relate span.vline{color:#f6f6f6}.countdown{color:#914b11;font-size:20px;position:absolute;z-index:1000;top:61px;right:5px;height:52px;line-height:52px}.countdown span{width:33px;text-align:center;border:1px solid #dedddc;background:#f5f5f5}.countdown b{padding:0 5px}.proSurPop{width:240px;height:245px;background:url(../img/questionnaire/profilePop.png) right bottom no-repeat;position:absolute;left:-230px;top:-17px}.proText{width:187px;height:100px;margin:115px 22px 0 22px;overflow-y:scroll;font-size:14px;line-height:24px}.proText::-webkit-scrollbar{-webkit-appearance:none;width:7px}.proText::-webkit-scrollbar-thumb{border-radius:4px;background-color:rgba(0,0,0,0.3);-webkit-box-shadow:0 0 1px rgba(255,255,255,0.3)}.proText .em{color:#ff6700}.proClose{width:37px;height:37px;position:absolute;right:0;top:0;cursor:pointer}
