--- a/src/Wenwen/FrontendBundle/Resources/views/Profile/account.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Profile/account.html.twig
@@ -36,8 +36,8 @@
                                 <label for="pwd">新密码：</label>
                                 <input type="password" id="pwd">
                                 <span class="hide" id="pwdStrength"><em class="fl">安全程度：</em><b class="c1">弱</b><b>中</b><b>强</b></span>
-                                <span id="newPwd_succeed" class="succeed"></span>
-                                <span id="newPwd_error"></span>
+                                <span id="pwd_succeed" class="succeed"></span>
+                                <span id="pwd_error"></span>
                             </li>
                             <li>
                                 <label for="pwdRepeat">确认密码：</label>
