modify image and css

--- a/src/Wenwen/FrontendBundle/Resources/views/Help/newGuideDetail.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Help/newGuideDetail.html.twig
@@ -49,8 +49,8 @@
                     <dd><img src="{{ asset('img/help/guide3-2.jpg') }}" width="800" height="510"/></dd>
                     <dt><strong>第三步</strong>选择心仪的商品，加入购物车，提交订单并支付</dt>
                     <dd><img src="{{ asset('img/help/guide3-3.jpg') }}" width="800" height="574"/></dd>
-                    <dt><strong>第三步</strong>点击右上角个人中心->任务历史，查看订单返利的最新状态</dt>
-                    <dd><img src="{{ asset('img/help/guide3-4.jpg') }}" width="800" height="354"/></dd>
+                    <dt><strong>第四步</strong>点击右上角个人中心->任务历史，查看订单返利的最新状态</dt>
+                    <dd><img src="{{ asset('img/help/guide3-4.jpg') }}" width="800" height="510"/></dd>
                </dl>
           </div>
           <div class="newGuideDetail" id="advertiserment">
