--- a/web/sass/home.scss
+++ b/web/sass/home.scss
@@ -67,6 +67,7 @@ $slider-height: 305px;
 		span{
 			width: 13px;
 			height: 13px;
+			line-height: 13px;
 			border-radius: 50%;
 			background: #979797;
 			color: #fff;
