--- a/src/Wenwen/FrontendBundle/Resources/views/Vote/_voteList.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Vote/_voteList.html.twig
@@ -17,23 +17,27 @@
                     <span>截止日期：{{ item.endTime|date("Y-m-d") }}</span>
                 </div>
             </span>
+            
             {% if item.timelimit is defined %}
             <div><input type="hidden" name="timelimit_ut" value="{{item.timelimit}}" /><div id="countdown" class="countdown"></div></div>
             <div class="tips expand-btn">
-                <span></span>
+                <span>?</span>
                 <div class="tips-con expand-con"><p>倒计时内回答此份快速回答，将额外获得1积分。</p><b class="arrow"></b></div>
             </div>
+            {% endif %}
+
+            {% if (item.endTime|date("Ymd") < "now"|date('Ymd')) %}
+                <div class="survey-btn"><a href="{{ path('jili_frontend_vote_result',{'id':item.id}) }}" class="disabled">去看看</a></div>
             {% else %}
-                {% if (item.endTime|date("Ymd") < "now"|date('Ymd')) %}
-                    <div class="survey-btn"><a href="{{ path('jili_frontend_vote_result',{'id':item.id}) }}" class="disabled">去看看</a></div>
+                {% if app.session.has('uid') and item.answerable %}
+                <div class="survey-btn"><a href="{{ path('jili_frontend_vote_show',{'id':item.id}) }}">去投票</a></div>
                 {% else %}
-                    {% if app.session.has('uid') and item.answerable %}
-                    <div class="survey-btn"><a href="{{ path('jili_frontend_vote_show',{'id':item.id}) }}">去投票</a></div>
-                    {% else %}
-                    <div class="survey-btn"><a href="{{ path('jili_frontend_vote_result',{'id':item.id}) }}" class="disabled">去看看</a></div>
-                    {% endif %}
+                <div class="survey-btn"><a href="{{ path('jili_frontend_vote_result',{'id':item.id}) }}" class="disabled">去看看</a></div>
                 {% endif %}
             {% endif %}
+
+
+            
         </li>
     {% endfor %}
 {% endif %}
