--- a/web/css/component/form.css
+++ b/web/css/component/form.css
@@ -1,1 +1,107 @@
-.form li{margin-top:10px}.form li label{width:100px;text-align:right;font-size:14px;display:inline-block;*display:inline;*zoom:1}.form input[type='text'],.form input[type='password'],.form input[type='email']{padding:0 5px;height:34px;line-height:34px;border:1px solid #e5e5e5;outline:none}.form input[type='text']:focus,.form input[type='text'].input_focus,.form input[type='password']:focus,.form input[type='password'].input_focus,.form input[type='email']:focus,.form input[type='email'].input_focus{border:1px solid #3bc570;box-shadow:inset 0 1px 1px rgba(0,0,0,0.075);transition:all 0.075s;-moz-transition:all 0.075s;-webkit-transition:all 0.075s;-o-transition:all 0.075s}.form input[type='text'].input_error,.form input[type='password'].input_error,.form input[type='email'].input_error{border:1px solid red}.form input[type='text']{width:255px}.form span{display:none;text-align:left;line-height:34px}.form span.succeed{color:#3bc570;display:inline-block;*display:inline;*zoom:1;background:url(../img/user/succeedIcon.png) no-repeat 2px 12px;font-size:0}.form span.focus{border:1px solid #e7e7e7;background:#fafafa;color:#898989;display:inline-block;*display:inline;*zoom:1;vertical-align:top}.form span.error,.form span strong{border:1px solid #ffbdbe;background:#ffebeb;color:red;display:inline-block;*display:inline;*zoom:1;vertical-align:top}.form span b{font-size:20px}.form span a{display:block;font-size:16px;color:#319dfa}.form span a.more{font-size:12px;display:inline}.form .btn span{width:74px;text-align:center;height:36px;line-height:36px;color:#fff;background:#ff652b;border:1px solid #ff652b;border-radius:3px;cursor:pointer;transition:all 0.4s;-moz-transition:all 0.4s;-webkit-transition:all 0.4s;-o-transition:all 0.4s;display:inline-block;*display:inline;*zoom:1;vertical-align:middle}.form .btn span:hover{background:#f05218;border:1px solid #f05218}#pwdStrength{padding:0;margin-right:4px}#pwdStrength b{margin-right:1px;width:45px;height:15px;text-align:center;line-height:15px;font-size:12px;color:#fff;background:#b9b9b9;vertical-align:middle;display:inline-block;*display:inline;*zoom:1}#pwdStrength b.c1{background:#ff8b3d}#signup_email_error ul li{max-width:280px;line-height:21px;padding:8px 0}
+.form li {
+  margin-top: 10px; }
+  .form li label {
+    width: 100px;
+    text-align: right;
+    font-size: 14px;
+    display: inline-block;
+    *display: inline;
+    *zoom: 1; }
+.form input[type='text'], .form input[type='password'], .form input[type='email'] {
+  padding: 0 5px;
+  height: 34px;
+  line-height: 34px;
+  border: 1px solid #e5e5e5;
+  outline: none; }
+  .form input[type='text']:focus, .form input[type='text'].input_focus, .form input[type='password']:focus, .form input[type='password'].input_focus, .form input[type='email']:focus, .form input[type='email'].input_focus {
+    border: 1px solid #3bc570;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+    transition: all 0.075s;
+    -moz-transition: all 0.075s;
+    -webkit-transition: all 0.075s;
+    -o-transition: all 0.075s; }
+  .form input[type='text'].input_error, .form input[type='password'].input_error, .form input[type='email'].input_error {
+    border: 1px solid #ff0000; }
+.form input[type='text'] {
+  width: 255px; }
+.form span {
+  display: none;
+  text-align: left;
+  line-height: 34px; }
+  .form span.succeed {
+    color: #3bc570;
+    display: inline-block;
+    *display: inline;
+    *zoom: 1;
+    background: url(../img/user/succeedIcon.png) no-repeat 2px 12px;
+    font-size: 0; }
+  .form span.focus {
+    border: 1px solid #e7e7e7;
+    background: #fafafa;
+    color: #898989;
+    display: inline-block;
+    *display: inline;
+    *zoom: 1;
+    vertical-align: top; }
+  .form span.error, .form span strong {
+    border: 1px solid #ffbdbe;
+    background: #ffebeb;
+    color: #ff0000;
+    display: inline-block;
+    *display: inline;
+    *zoom: 1;
+    vertical-align: top; }
+  .form span b {
+    font-size: 20px; }
+  .form span a {
+    display: block;
+    font-size: 16px;
+    color: #319dfa; }
+    .form span a.more {
+      font-size: 12px;
+      display: inline; }
+.form .btn span {
+  width: 74px;
+  text-align: center;
+  height: 36px;
+  line-height: 36px;
+  color: #fff;
+  background: #ff652b;
+  border: 1px solid #ff652b;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  display: inline-block;
+  *display: inline;
+  *zoom: 1;
+  vertical-align: middle; }
+  .form .btn span:hover {
+    background: #f05218;
+    border: 1px solid #f05218; }
+
+#pwdStrength {
+  padding: 0;
+  margin-right: 4px; }
+  #pwdStrength b {
+    margin-right: 1px;
+    width: 45px;
+    height: 15px;
+    text-align: center;
+    line-height: 15px;
+    font-size: 12px;
+    color: #fff;
+    background: #b9b9b9;
+    vertical-align: middle;
+    display: inline-block;
+    *display: inline;
+    *zoom: 1; }
+    #pwdStrength b.c1 {
+      background: #ff8b3d; }
+
+#signup_email_error ul li {
+  max-width: 280px;
+  line-height: 21px;
+  padding: 8px 0; }
