--- a/src/Wenwen/FrontendBundle/Resources/views/base.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/base.html.twig
@@ -19,5 +19,13 @@
     <div class="footer">
         {% block footer %}{% endblock %}
     </div>
+    <!-- baidu -->
+    <div style="display:none;">
+    <script type="text/javascript">
+    var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+    document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F878d6a1fecf76315390d7c5db8779bef' type='text/javascript'%3E%3C/script%3E"));
+    </script>
+    </div>
+    <!-- /baidu -->
 </body>
 </html>
