update css class name

--- a/web/sass/index.scss
+++ b/web/sass/index.scss
@@ -19,7 +19,7 @@ $main-ad-color: #eb7020;
 		margin-top: 80px;
 	}
 }
-.main-ad{
+.main-adv{
 	height: 673px;
 	overflow: hidden;
 	background: #1bb5e6; 
@@ -42,14 +42,14 @@ $main-ad-color: #eb7020;
 	background-size: contain;
 	margin: 0 auto;
 }
-.main-ad-con{
+.main-adv-con{
 	width: 1000px;
 	height: 100%;
 	position: relative;
 	z-index: 1;
 	margin: 0 auto;
 }
-.main-ad-con-text{
+.main-adv-con-text{
 	color: #f4fafd;
 	left: 0;
 	top: 145px;
