--- a/src/Wenwen/FrontendBundle/Resources/views/Components/_headerNav.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Components/_headerNav.html.twig
@@ -9,7 +9,8 @@
             {% set router_current = app.request.attributes.get('_route') %}
             <a href="{{ path('_homepage') }}" title="首页" {{ router_current == '_homepage' ? 'class="first active"':'class="first"' }}>首页</a>
             {% if app.request.attributes.get('_route') == '_user_login' %}
-                <a href="javascript: void(0)" title="问卷列表">问卷列表</a>
+                <a class="surUnlog" title="问卷列表">问卷列表</a>
+                <span class="logFirst"><em></em>您需要先登录，才能查看<br>专属您的问卷哦！</span>
             {% else %}
             <a href="{{ path('_survey_index') }}" title="问卷列表" {{ router_current == '_survey_index' ? 'class="active"':'' }}>问卷列表</a>
             {% endif %}
